--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,6 +15,8 @@ tauri = { version = "2.0.0-beta", features = [] }
 tauri-plugin-shell = "2.0.0-beta"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+image = "0.25.1"
+tauri-plugin-dialog = "2.0.0-beta.9"
 
 [profile.release]
 strip = true      # Automatically strip symbols from the binary.
