--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,6 +17,8 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 image = "0.25.1"
 tauri-plugin-dialog = "2.0.0-beta.9"
+rayon = "1.10"
+jpeg-encoder = { version = "0.6.0", features = ["simd"] }
 
 [profile.release]
 strip = true      # Automatically strip symbols from the binary.
