--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   "devDependencies": {
     "@tauri-apps/cli": ">=2.0.0-beta.0",
     "@vitejs/plugin-vue": "^5.0.5",
+    "naive-ui": "^2.38.2",
     "typescript": "^5.2.2",
+    "unplugin-auto-import": "^0.17.6",
+    "unplugin-vue-components": "^0.27.2",
     "vite": "^5.3.1",
     "vue-tsc": "^2.0.22"
   }
