--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vitejs/plugin-vue": "^5.0.5",
     "naive-ui": "^2.38.2",
     "typescript": "^5.2.2",
+    "unocss": "^0.61.0",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-vue-components": "^0.27.2",
     "vite": "^5.3.1",
