--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,7 @@ tauri-plugin-dialog = "2.0.0-beta.9"
 rayon = "1.10"
 jpeg-encoder = { version = "0.6.0", features = ["simd"] }
 walkdir = "2"
+base64 = "0.22.1"
 
 [profile.release]
 strip = true      # Automatically strip symbols from the binary.
