--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,6 +21,8 @@ rayon = "1.10"
 jpeg-encoder = { version = "0.6.0", features = ["simd"] }
 walkdir = "2"
 base64 = "0.22.1"
+specta = "=2.0.0-rc.12"
+tauri-specta = { version = "=2.0.0-rc.11", features = ["javascript", "typescript"] }
 
 [profile.release]
 strip = true      # Automatically strip symbols from the binary.
