--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2021"
 tauri-build = { version = "2.0.0-beta", features = [] }
 
 [dependencies]
-tauri = { version = "2.0.0-beta", features = [] }
+tauri = { version = "2.0.0-beta", features = ["devtools"] }
 tauri-plugin-shell = "2.0.0-beta"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
@@ -28,5 +28,5 @@ imagesize = "0.13.0"
 [profile.release]
 strip = true      # Automatically strip symbols from the binary.
 lto = true
-codegen-units = 1
+# codegen-units = 1
 panic = "abort"
