--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,6 +24,7 @@ base64 = "0.22.1"
 specta = "=2.0.0-rc.12"
 tauri-specta = { version = "=2.0.0-rc.11", features = ["typescript"] }
 imagesize = "0.13.0"
+anyhow = "1.0"
 
 [profile.release]
 strip = true      # Automatically strip symbols from the binary.
