--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,21 +13,25 @@ tauri-build = { version = "2.0.0-beta", features = [] }
 [dependencies]
 tauri = { version = "2.0.0-beta", features = ["devtools"] }
 tauri-plugin-shell = "2.0.0-beta"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-image = "0.25.1"
 tauri-plugin-dialog = "2.0.0-beta.9"
-rayon = "1.10"
-jpeg-encoder = { version = "0.6.0", features = ["simd"] }
-walkdir = "2"
-base64 = "0.22.1"
+
 specta = "=2.0.0-rc.12"
 tauri-specta = { version = "=2.0.0-rc.11", features = ["typescript"] }
+
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+
+base64 = "0.22.1"
+image = "0.25.1"
+jpeg-encoder = { version = "0.6.0", features = ["simd"] }
 imagesize = "0.13.0"
+
+rayon = "1.10"
+walkdir = "2"
 anyhow = "1.0"
 
 [profile.release]
 strip = true      # Automatically strip symbols from the binary.
 lto = true
-# codegen-units = 1
+codegen-units = 1
 panic = "abort"
