--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tauri-apps/api": ">=2.0.0-beta.0",
     "@tauri-apps/plugin-dialog": "2.0.0-beta.5",
+    "@tauri-apps/plugin-fs": "2.0.0-beta.6",
     "@tauri-apps/plugin-shell": ">=2.0.0-beta.0",
     "vue": "^3.3.4"
   },
