--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,6 +14,7 @@ tauri-build = { version = "2.0.0-beta", features = [] }
 tauri = { version = "2.0.0-beta", features = ["devtools"] }
 tauri-plugin-shell = "2.0.0-beta"
 tauri-plugin-dialog = "2.0.0-beta.9"
+tauri-plugin-fs = "2.0.0-beta"
 
 specta = "=2.0.0-rc.12"
 tauri-specta = { version = "=2.0.0-rc.11", features = ["typescript"] }
@@ -31,6 +32,7 @@ walkdir = "2"
 anyhow = "1.0"
 showfile = "0.1.1"
 dirs = "5.0"
+path-slash = "0.2.1"
 
 [profile.release]
 strip = true      # Automatically strip symbols from the binary.
