--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,7 +23,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
 base64 = "0.22.1"
-image = "0.25.1"
+image = { version = "0.25.1", default-features = false, features = ["jpeg", "png"] }
 jpeg-encoder = { version = "0.6.0", features = ["simd"] }
 imagesize = "0.13.0"
 
