--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -12,27 +12,27 @@ tauri-build = { version = "2.0.0-beta", features = [] }
 
 [dependencies]
 tauri = { version = "2.0.0-beta", features = ["devtools"] }
-tauri-plugin-shell = "2.0.0-beta"
-tauri-plugin-dialog = "2.0.0-beta.9"
-tauri-plugin-fs = "2.0.0-beta"
+tauri-plugin-shell = { version = "2.0.0-beta" }
+tauri-plugin-dialog = { version = "2.0.0-beta.9" }
+tauri-plugin-fs = { version = "2.0.0-beta" }
 
-specta = "=2.0.0-rc.12"
+specta = { version = "=2.0.0-rc.12" }
 tauri-specta = { version = "=2.0.0-rc.11", features = ["typescript"] }
 
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
-base64 = "0.22.1"
+base64 = { version = "0.22.1" }
 image = { version = "0.25.1", default-features = false, features = ["jpeg", "png"] }
 jpeg-encoder = { version = "0.6.0", features = ["simd"] }
-imagesize = "0.13.0"
+imagesize = { version = "0.13.0" }
 
-rayon = "1.10"
-walkdir = "2"
-anyhow = "1.0"
-showfile = "0.1.1"
-dirs = "5.0"
-path-slash = "0.2.1"
+rayon = { version = "1.10" }
+walkdir = { version = "2" }
+anyhow = { version = "1.0" }
+showfile = { version = "0.1.1" }
+dirs = { version = "5.0" }
+path-slash = { version = "0.2.1" }
 
 [profile.release]
 strip = true      # Automatically strip symbols from the binary.
