--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -8,16 +8,17 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-beta", features = [] }
+tauri-build = { version = "2.0.0-rc", features = [] }
 
 [dependencies]
-tauri = { version = "2.0.0-beta", features = ["devtools"] }
-tauri-plugin-shell = { version = "2.0.0-beta" }
-tauri-plugin-dialog = { version = "2.0.0-beta.9" }
-tauri-plugin-fs = { version = "2.0.0-beta" }
+tauri = { version = "2.0.0-rc", features = ["devtools"] }
+tauri-plugin-shell = { version = "2.0.0-rc" }
+tauri-plugin-dialog = { version = "2.0.0-rc" }
+tauri-plugin-fs = { version = "2.0.0-rc" }
 
-specta = { version = "=2.0.0-rc.12" }
-tauri-specta = { version = "=2.0.0-rc.11", features = ["typescript"] }
+specta = { version = "2.0.0-rc" }
+tauri-specta = { version = "2.0.0-rc", features = ["derive", "typescript"] }
+specta-typescript = { version = "0.0.7" }
 
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
