--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tauri-apps/plugin-dialog": "2.0.0-beta.5",
     "@tauri-apps/plugin-fs": "2.0.0-beta.6",
     "@tauri-apps/plugin-shell": ">=2.0.0-beta.0",
+    "@viselect/vue": "^3.5.1",
     "vue": "^3.3.4"
   },
   "devDependencies": {
