--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,6 +28,7 @@ image = { version = "0.25.1", default-features = false, features = ["jpeg", "png
 jpeg-encoder = { version = "0.6.0", features = ["simd"] }
 imagesize = { version = "0.13.0" }
 reqwest = { version = "0.12.5" }
+qrcode = { version = "0.14.1" }
 
 rayon = { version = "1.10" }
 walkdir = { version = "2" }
