--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -37,7 +37,7 @@ showfile = { version = "0.1.1" }
 dirs = { version = "5.0" }
 path-slash = { version = "0.2.1" }
 tokio = { version = "1", features = ["full"] }
-bytes = "1.7.1"
+bytes = { version = "1.7.1" }
 
 [profile.release]
 strip = true      # Automatically strip symbols from the binary.
