--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -38,6 +38,7 @@ dirs = { version = "5.0" }
 path-slash = { version = "0.2.1" }
 tokio = { version = "1", features = ["full"] }
 bytes = { version = "1.7.1" }
+parking_lot = { version = "0.12.3", features = ["send_guard"] }
 
 [profile.release]
 strip = true      # Automatically strip symbols from the binary.
