--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tauri-apps/plugin-fs": "2.0.0-beta.6",
     "@tauri-apps/plugin-shell": ">=2.0.0-beta.0",
     "@viselect/vue": "^3.6.0",
+    "prettier": "^3.4.2",
     "vue": "^3.3.4"
   },
   "devDependencies": {
